[gd_scene load_steps=5 format=3 uid="uid://bp0xjrt6qj5xr"]

[ext_resource type="Script" uid="uid://djm0hk7wq4tx4" path="res://Juego/load_scene.gd" id="1_r1xhr"]

[sub_resource type="Animation" id="Animation_bssqp"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_r1xhr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_snxw0"]
_data = {
&"RESET": SubResource("Animation_r1xhr"),
&"fade_out": SubResource("Animation_bssqp")
}

[node name="Load_scene" type="CanvasLayer"]
layer = 0
script = ExtResource("1_r1xhr")

[node name="background_color" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Animation_Fade" type="AnimationPlayer" parent="background_color"]
libraries = {
&"": SubResource("AnimationLibrary_snxw0")
}
autoplay = "fade_out"
